--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -35,12 +35,12 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "*"
+python = ">=3.10,<3.12"
 {%- if cookiecutter.command_line_interface|lower == 'click' %}
 click = "*"
 {%- endif %}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bumpversion = "*"
 coverage = "*"
 flake8 = "*"
@@ -52,6 +52,10 @@ pytest = "*"{% endif %}
 sphinx = "*"
 tox = "*"
 yapf = "*"
+black="*"
+urllib3 = "^1.26.12"
+requests = "^2.28.1"
+
 
 {% if cookiecutter.command_line_interface|lower == 'click' -%}
 [tool.poetry.scripts]
